# GTA-Orange-Reloaded

./: .gitignore  .gitmodules  Launcher.sln  README.md
Launcher/: FolderBrowser.cpp  FolderBrowser.h  Injector.cpp  Injector.h  Launcher.cpp  Launcher.rc  Launcher.vcxproj  Launcher.vcxproj.filters  ReadMe.txt  Registry.cpp  Registry.h  Utils.cpp  Utils.h  config.xml  resource.h  stdafx.h  targetver.h
Server/: API.cpp  API.h  API_ext.cpp  API_ext.h  CClientScripting.cpp  CClientScripting.h  CConfig.cpp  CConfig.h  CHTTPServer.cpp  CHTTPServer.h  CLog.h  CMakeLists.txt  CNetwokMarker.cpp  CNetwork3DText.cpp  CNetwork3DText.h  CNetworkBlip.cpp  CNetworkBlip.h  CNetworkConnection.cpp  CNetworkConnection.h  CNetworkMarker.cpp  CNetworkMarker.h  CNetworkMasterServer.cpp  CNetworkMasterServer.h  CNetworkObject.cpp  CNetworkObject.h  CNetworkPlayer.cpp  CNetworkPlayer.h  CNetworkVehicle.cpp  CNetworkVehicle.h  CPyArgBuilder.cpp  CPyArgBuilder.h  CRPCPlugin.cpp  CRPCPlugin.h  Natives.cpp  Natives.h  Orange-server.cbp  Orange-server.cbp.mak  Orange-server.depend  Orange-server.layout  Player.cpp  (+19 more)
font-converter/: ReadMe.txt  font-converter.cpp  font-converter.vcxproj  font-converter.vcxproj.filters  stdafx.cpp
lua-module/: API.h  CMakeLists.txt  Makefile  SResource.cpp  SResource.h  hello  ls_mysql.cpp  lua-module.cbp  lua-module.cpp  lua-module.depend  lua-module.layout  lua-module.vcxproj  lua-module.vcxproj.filters  lua_Blips.cpp  lua_Main.cpp  lua_Main.h  lua_Markers.cpp  lua_Object.cpp  lua_Player.cpp  lua_Vehicle.cpp  luasql.cpp  luasql.h  stdafx.cpp  stdafx.h
master-server/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  OrangeServer.cpp  OrangeServer.h  ReadMe.txt  master-server.cpp  master-server.vcxproj  master-server.vcxproj.filters  stdafx.cpp  stdafx.h
modules/pawn-module/: CFunctions.cpp  CFunctions.h  CGamemode.cpp  CGamemode.h  CScripts.h  pawn-module.cpp  pawn-module.vcxproj  pawn-module.vcxproj.filters  stdafx.cpp  stdafx.h  СScripts.cpp
modules/simple-module/: simple-module.cpp  simple-module.vcxproj
nodejs-module/: NodeModule.cpp  NodeModule.h  node_blips.cpp  node_events.cpp  node_orange.cpp  node_orange.h  node_player.cpp  node_vehicle.cpp  nodejs-module.cpp  nodejs-module.vcxproj  nodejs-module.vcxproj.filters  stdafx.cpp  stdafx.h
nodejs-module/nodejs-module/: main.js  package.json
orange-core/: BackScene.cpp  CBuffer.cpp  CEFCore.h  CEFSchemeHandler.cpp  CEFSchemeHandler.h  CEFSimple.h  CEFTest.cpp  CEFTest.h  CEFV8Handler.cpp  CEFV8Handler.h  CEFView.cpp  CEFView.h  ChatGUI.cpp  FreemodeCustomize.cpp  Game.h  Globals.cpp  Globals.h  GtaScripts.cpp  GtaScripts.h  GuiDispatcher.cpp  GuiDispatcher.h  HWID.cpp  LuaNativeEngine.cpp  LuaUIDefs.cpp  Memory.cpp  Memory.h  MemoryCache.cpp  MemoryCache.h  PreRender.cpp  ReadMe.txt  Registry.cpp  Registry.h  ScaleformManager.h  ScriptingScene.cpp  ScriptingScript.cpp  ServerBrowser.cpp  Utils.cpp  Utils.h  chatfont.h  dllmain.cpp  (+20 more)
orange-core/CEF/: CEFCore.cpp  CEFCore.h  CEFSimple.cpp  CEFSimple.h  CEFView.cpp  CEFView.h
orange-core/Cef/: Window.cpp  Window.h
orange-core/Core/: Chat.cpp  Chat.h  Commands.cpp  Commands.h  Natives.h  Script.cpp  Script.h  ScriptInvoker.cpp  ScriptInvoker.h  nativeInvoker.cpp  nativeInvoker.h  pgCollection.h  pgPtrCollection.h  scrEngine.cpp  scrEngine.h  scrManager.cpp  scrManager.h  scrThread.cpp  scrThread.h  types.h
orange-core/D3D11/: d3dhook.cpp  d3dhook.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx11.cpp  rendering.cpp
orange-core/GTA/: CGraphics.cpp  CGraphics.h  CRage.cpp  CRage.h  CReplayInterface.cpp  CReplayInterface.h  VTasks.cpp  VTasks.h  sysAllocator.cpp  sysAllocator.h
orange-core/Network/: CConfig.cpp  CConfig.h  CEntity.cpp  CEntity.h  CLocalPlayer.cpp  CLocalPlayer.h  CNetwork3DText.cpp  CNetwork3DText.h  CNetworkBlip.cpp  CNetworkBlip.h  CNetworkConnection.cpp  CNetworkConnection.h  (+18 more)
python moduke/: API.h  CVector3.h  python-Functions.h  python-functions.cpp  python-module.cpp  stdafx.h
python-module/: CMakeLists.txt  python-Functions.h  python-functions.cpp  python-module.cpp  python-module.vcxproj  python-module.vcxproj.filters  python_3DText.cpp  python_Blip.cpp  python_Main.cpp  python_Main.h  python_Marker.cpp  python_Object.cpp  python_Pickup.cpp  python_Player.cpp  python_Vehicle.cpp  stdafx.cpp  stdafx.h
shared/: API.h  CMath.h  CVector3.h  Models.h  NetworkTypes.h  api.txt  types.h
simple-module/: API.h  python-module.vcxproj  python-module.vcxproj.filters  simple-module.cpp  simple-module.vcxproj  simple-module.vcxproj.filters  stdafx.h
(+93 files in other folders)
