cmake_minimum_required(VERSION 3.0)
project(python3.4-module)
project(python3.5-module)
project(python3.6-module)

set(CMAKE_CXX_STANDARD 11)
add_definitions(-std=c++11)

set(SOURCE_FILES python-module.cpp python_Main.cpp python_3DText.cpp python_Blip.cpp python_Marker.cpp python_Object.cpp python_Pickup.cpp python_Player.cpp python_Vehicle.cpp)
add_library(python3.4-module SHARED ${SOURCE_FILES})
add_library(python3.5-module SHARED ${SOURCE_FILES})
add_library(python3.6-module SHARED ${SOURCE_FILES})

set_target_properties(python3.4-module PROPERTIES PREFIX "")
set_target_properties(python3.4-module PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../x64/Release/server/modules)
set_target_properties(python3.5-module PROPERTIES PREFIX "")
set_target_properties(python3.5-module PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../x64/Release/server/modules)
set_target_properties(python3.6-module PROPERTIES PREFIX "")
set_target_properties(python3.6-module PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../x64/Release/server/modules)

include_directories(/usr/include/python3.4m/ ../shared/)
link_directories(/usr/lib/x86_64-linux-gnu/)
target_link_libraries(python3.4-module python3.4m)
target_link_libraries(python3.5-module python3.5m)
target_link_libraries(python3.6-module python3.6m)